@@ -43,7 +43,7 @@ Para versión siguiente:
 
 -text adventure map: opcion mostrar descripciones. localidad 14 por ejemplo se mezcla??
 
--visual real tape no actualiza bien si menu cerrado y top speed
+
 
 
 
