@@ -100,6 +100,7 @@ Fixed several memory leaks (thanks to tool valgrind) found on:
 
 Fixed Initialization of Visual memory tables
 Fixed ZX Vision relocation windows
+Fixed rendering display when CPU is on Top Speed mode
 Fixed error when no permissions writing to mmc, ide, trd, dsk, ddh (hilow): disable persistent writes when it happens
 Fixed permissions when installing ZEsarUX on Linux: zxuno.flash and tbblue.mmc are now writable by anyone
 Fixed Text Adventure Graphics rendering invalid characters
